# DesignWorkshop

./: .gitignore  CMakeLists.txt  README.md  REQUIREMENTS.md  University Project.sln
University Project/: University Project.vcxproj  University Project.vcxproj.filters
University Project/include/: Allocator.h  Clock.h  CmdArgManager.h  DataCacheManager.h  Databases.h  Format.h  Logger.h  Server.h  ServerSettingsParser.h
University Project/src/: Clock.cpp  CmdArgvManager.cpp  DataCacheManager.cpp  Databases.cpp  Logger.cpp  Main.cpp  Server.cpp  ServerSettingsParser.cpp
include/: Allocator.h  Clock.h  Format.h  Http.h  Logger.h  Message.h  PageManager.h  Server.h
src/: Clock.cpp  Logger.cpp  Main.cpp  Server.cpp
